--- a/FaceDetectionVideo.ipynb
+++ b/FaceDetectionVideo.ipynb
@@ -12,9 +12,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'tuple' object is not callable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-13-ad5648e28217>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     19\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     20\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mx\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mw\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mh\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mfaces\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 21\u001b[1;33m         \u001b[0mframe\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcv2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrectangle\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mframe\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0mw\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0mh\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m255\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     22\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     23\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mfirst_frame\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'tuple' object is not callable"
+     ]
+    }
+   ],
    "source": [
     "# Si se pone 0 se activa la camara frontal\n",
     "\n",
@@ -23,7 +35,7 @@
     "status_list = [None,None]\n",
     "times = []\n",
     "\n",
-    "\n",
+    "face_cascade = cv2.CascadeClassifier(\"haarcascade_frontalface_default.xml\")\n",
     "video = cv2.VideoCapture(\"pruebavideo.mp4\")\n",
     "\n",
     "while True:\n",
@@ -33,6 +45,11 @@
     "    gray = cv2.cvtColor(frame,cv2.COLOR_BGR2GRAY)\n",
     "    gray = cv2.GaussianBlur(gray,(21,21),0)\n",
     "    \n",
+    "    faces = face_cascade.detectMultiScale(gray, scaleFactor = 1.07,minNeighbors =5)\n",
+    "    \n",
+    "    for x,y,w,h in faces:\n",
+    "        frame = cv2.rectangle(frame,(x,y),(x+w,y+h),(0,255,0),2)\n",
+    "\n",
     "    if first_frame is None:\n",
     "        first_frame = gray\n",
     "        continue\n",
@@ -50,7 +67,7 @@
     "            continue\n",
     "        status=1\n",
     "        (x,y,w,h) = cv2.boundingRect(contour)\n",
-    "        cv2.rectangle=(frame, (x+y),(x+w,y+h),(0,255,0),2)\n",
+    "        cv2.rectangle=(frame, (x+y),(x+w,y+h),(0,255,0),3)\n",
     "\n",
     "    status_list.append(status)\n",
     "    status_list = status_list[-2:]\n",
