--- a/FaceDetectionImage.ipynb
+++ b/FaceDetectionImage.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,27 +11,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'numpy.ndarray'>\n",
-      "[[531 319  60  60]\n",
-      " [422 151 146 146]\n",
-      " [242 426  71  71]\n",
-      " [379 380 166 166]\n",
-      " [131 118 113 113]\n",
-      " [577 196 217 217]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "face_cascade = cv2.CascadeClassifier(\"haarcascade_frontalface_default.xml\")\n",
     "\n",
-    "img = cv2.imread(\"C://Users//hugoh//Desktop//FaceDeteaction//faces2.jpg\",1)\n",
+    "img = cv2.imread(\"faces3.jpg\",1)\n",
     "\n",
     "gray_img = cv2.cvtColor(img,cv2.COLOR_BGR2GRAY)\n",
     "\n",
@@ -52,13 +38,6 @@
     "cv2.destroyAllWindows()\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
