--- a/FaceDetectionVideo.ipynb
+++ b/FaceDetectionVideo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,18 +12,127 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'tuple' object is not callable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-13-ad5648e28217>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     19\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     20\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mx\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mw\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mh\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mfaces\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 21\u001b[1;33m         \u001b[0mframe\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcv2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrectangle\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mframe\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0mw\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0mh\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m255\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     22\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     23\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mfirst_frame\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'tuple' object is not callable"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[384   3 137 137]\n",
+      " [711  40 342 342]\n",
+      " [220 186  71  71]]\n",
+      "[[718  31 330 330]]\n",
+      "[[494   1 160 160]\n",
+      " [526 208 102 102]]\n",
+      "[[494   2 169 169]\n",
+      " [535 218  87  87]]\n",
+      "[[486   4 171 171]\n",
+      " [521 212 106 106]]\n",
+      "[[472   3 163 163]\n",
+      " [505 205 123 123]\n",
+      " [656 511  92  92]]\n",
+      "[[461  83 187 187]]\n",
+      "[[486 151 158 158]]\n",
+      "[[580 204 136 136]\n",
+      " [769 648  66  66]]\n",
+      "[[591 192 131 131]]\n",
+      "[[559 182 129 129]\n",
+      " [732 651  59  59]]\n",
+      "[[544 181 127 127]\n",
+      " [730 652  60  60]]\n",
+      "[[540 175 132 132]\n",
+      " [728 650  62  62]]\n",
+      "[[536 172 135 135]]\n",
+      "[[534 170 135 135]]\n",
+      "[[535 170 134 134]\n",
+      " [590 352  67  67]]\n",
+      "[[537 171 133 133]\n",
+      " [587 351  72  72]]\n",
+      "[[539 169 137 137]\n",
+      " [595 355  62  62]]\n",
+      "[[542 172 134 134]]\n",
+      "[[550 177 131 131]]\n",
+      "[[555 178 130 130]]\n",
+      "[[559 180 128 128]\n",
+      " [607 354  62  62]]\n",
+      "[[565 181 128 128]]\n",
+      "[[568 181 129 129]\n",
+      " [612 356  64  64]]\n",
+      "[[576 182 128 128]]\n",
+      "[[581 180 130 130]\n",
+      " [626 356  65  65]]\n",
+      "[[580 178 128 128]\n",
+      " [623 355  65  65]]\n",
+      "[[568 175 130 130]\n",
+      " [615 356  62  62]]\n",
+      "[[513 172 138 138]]\n",
+      "[[325 182 137 137]]\n",
+      "[[120 160 150 150]]\n",
+      "[[ 41 150 159 159]\n",
+      " [120 341  82  82]]\n",
+      "[[ 25 152 157 157]]\n",
+      "[[ 16 154 155 155]]\n",
+      "[[ 10 160 147 147]]\n",
+      "[[ 12 170 142 142]]\n",
+      "[[ 14 174 129 129]]\n",
+      "[[  5 185 114 114]]\n",
+      "()\n",
+      "()\n",
+      "()\n",
+      "()\n",
+      "()\n",
+      "()\n",
+      "()\n",
+      "()\n",
+      "()\n",
+      "()\n",
+      "()\n",
+      "()\n",
+      "()\n",
+      "[[  2 170 115 115]]\n",
+      "[[  4 164 117 117]]\n",
+      "[[ 11 166 115 115]]\n",
+      "[[ 11 161 122 122]]\n",
+      "[[  9 161 120 120]]\n",
+      "[[  7 166 124 124]]\n",
+      "[[ 11 173 112 112]]\n",
+      "[[  9 178 109 109]]\n",
+      "[[  9 184 109 109]]\n",
+      "[[  5 184 113 113]]\n",
+      "[[  5 185 111 111]]\n",
+      "[[  2 188 108 108]]\n",
+      "[[  4 187 102 102]]\n",
+      "[[  3 187 103 103]]\n",
+      "[[  3 187 102 102]]\n",
+      "[[  4 187 101 101]]\n",
+      "[[  4 190  99  99]]\n",
+      "[[  4 184 103 103]]\n",
+      "[[  7 188  99  99]]\n",
+      "[[  7 187 103 103]]\n",
+      "[[ 12 192  96  96]]\n",
+      "[[ 13 189 100 100]]\n",
+      "[[  9 184 106 106]]\n",
+      "[[  8 184 114 114]]\n",
+      "[[  9 183 111 111]]\n",
+      "[[  6 174 106 106]]\n",
+      "()\n",
+      "()\n",
+      "()\n",
+      "()\n",
+      "()\n",
+      "()\n",
+      "()\n",
+      "()\n",
+      "()\n",
+      "()\n",
+      "()\n",
+      "()\n",
+      "()\n",
+      "()\n",
+      "()\n",
+      "()\n",
+      "()\n"
      ]
     }
    ],
@@ -36,20 +145,21 @@
     "times = []\n",
     "\n",
     "face_cascade = cv2.CascadeClassifier(\"haarcascade_frontalface_default.xml\")\n",
-    "video = cv2.VideoCapture(\"pruebavideo.mp4\")\n",
+    "video = cv2.VideoCapture(0)\n",
     "\n",
     "while True:\n",
     "    \n",
     "    check, frame = video.read()\n",
     "    status = 0\n",
     "    gray = cv2.cvtColor(frame,cv2.COLOR_BGR2GRAY)\n",
-    "    gray = cv2.GaussianBlur(gray,(21,21),0)\n",
+    "    #gray = cv2.GaussianBlur(gray,(21,21),0)\n",
     "    \n",
     "    faces = face_cascade.detectMultiScale(gray, scaleFactor = 1.07,minNeighbors =5)\n",
+    "    print(faces)\n",
+    "    #for x,y,w,h in faces:\n",
+    "    #    gray = cv2.rectangle(gray,(x,y),(x+w,y+h),(0,255,0),3)\n",
+    "        \n",
     "    \n",
-    "    for x,y,w,h in faces:\n",
-    "        frame = cv2.rectangle(frame,(x,y),(x+w,y+h),(0,255,0),2)\n",
-    "\n",
     "    if first_frame is None:\n",
     "        first_frame = gray\n",
     "        continue\n",
@@ -69,18 +179,11 @@
     "        (x,y,w,h) = cv2.boundingRect(contour)\n",
     "        cv2.rectangle=(frame, (x+y),(x+w,y+h),(0,255,0),3)\n",
     "\n",
-    "    status_list.append(status)\n",
-    "    status_list = status_list[-2:]\n",
     "    \n",
-    "    if status_list[-1]==1 and status_list[-2]==0:\n",
-    "        times.append(datatime.now())\n",
-    "    if status_list[-1]==0 and status_list[-2]==1:\n",
-    "        times.append(datatime.now())\n",
-    "    \n",
-    "    cv2.imshow(\"frame\",frame)\n",
+    "    #cv2.imshow(\"frame\",frame)\n",
     "    cv2.imshow(\"Capturing\",gray)\n",
-    "    cv2.imshow(\"delta\",delta_frame)\n",
-    "    cv2.imshow(\"thresh\",thresh_delta)\n",
+    "    #cv2.imshow(\"delta\",delta_frame)\n",
+    "    #cv2.imshow(\"thresh\",thresh_delta)\n",
     "    \n",
     "    \n",
     "    key = cv2.waitKey(1)\n",
@@ -95,6 +198,13 @@
     "\n",
     "cv2.destroyAllWindows()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
